<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general"
        android:key="pref_key_general"
        >

        <SwitchPreference
            android:key="KrakenActivated"
            android:title="@string/pref_activated"
            android:summary="@string/pref_activated_summary" />

        <CheckBoxPreference
            android:key="KrakenShowNotification"
            android:title="@string/pref_show_notification"
            android:summary="@string/pref_show_notification_summary"
            android:dependency="KrakenActivated"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_data"
        android:key="pref_key_data"
        android:dependency="KrakenActivated">

        <ListPreference
            android:key="KrakenDataProfile"
            android:title="@string/data_profile"
            android:entries="@array/data_profile_titles"
            android:entryValues="@array/data_profile_values"
            android:defaultValue="KrakenDataProfileBasic"
            android:summary="%s"/>

    </PreferenceCategory>

</PreferenceScreen>