<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="58dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textSize="30sp"
                android:text="@string/tutorial_disclaimer_title"/>

            <TextView
                android:id="@+id/tutorial_disclaimer_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:fontFamily="sans-serif-light"
                android:textSize="16sp"
                android:text="@string/tutorial_disclaimer_text"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/buttonDecline"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:text="@string/decline"
            android:onClick="declineDisclaimer"/>

        <Button
            android:id="@+id/buttonAccept"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:text="@string/accept"
            android:onClick="acceptDisclaimer"/>

    </LinearLayout>


</RelativeLayout>